# agentstorefront

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  FIDELE_5_PERCENT.md  LIVE_VERIFY_LOG.md  PUSH_TO_GITHUB.sh  README.md  REDEPLOY.sh  VERIFY_LOG.md
backend/: .env.example  README.md  auth.py  db.py  main.py  models.py  nixpacks.toml  railway.toml  requirements.txt
backend/routes/: agents.py  discover.py  sellers.py  services.py  subscribe.py
backend/tests/: test_api.py
landing/: README.md  index.html
sdk-python/: README.md  pyproject.toml
sdk-python/agentstorefront/: __init__.py  client.py
sdk-python/examples/: crypto_bot.py  personal_assistant.py  research_assistant.py
