[project]
name = "agentstorefront"
version = "0.1.0"
description = "Python SDK for AgentStorefront — the App Store for AI agents."
authors = [{ name = "Fidele M.", email = "lmaniraruta@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://agentstorefront.com"
Repository = "https://github.com/lfidele/agentstorefront"
Issues = "https://github.com/lfidele/agentstorefront/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentstorefront*"]
